rusty-cdk-macros/tests/fails/maximum_message_size_too_low.rs
use rusty_cdk_macros::maximum_message_size;

fn example() {
    let size = maximum_message_size!(512);
}

fn main() {}